lab/02-lab-kotlin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-kotlin
  namespace: lab
  labels:
    app: lab-kotlin
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
    - name: jmx
      port: 8081
    - name: rmi
      port: 8082
  selector:
    app: lab-kotlin
