lab/01-lab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: lab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "5"
spec:
  rules:
    - host: lab.java
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-java
                port:
                  number: 8080
    - host: lab.kotlin
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab-kotlin
                port:
                  number: 8080
